Refactor code structure for improved readability and maintainability

--- a/src/app/core/layout/baseLayout/baseLayout.component.html
+++ b/src/app/core/layout/baseLayout/baseLayout.component.html
@@ -4,3 +4,7 @@
     <p-toggleswitch (onChange)="toggleDarkMode()" />
   </div>
 </p-panel>
+
+<div class="py-4 px-8">
+  <router-outlet ></router-outlet>
+</div>
