--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+@import "primeicons/primeicons.css";
 @plugin "tailwindcss-primeui";
+
+body {
+    background-color: #f8fafc;
+}
