--- a/src/app/core/layout/baseLayout/baseLayout.component.html
+++ b/src/app/core/layout/baseLayout/baseLayout.component.html
@@ -1,6 +1,6 @@
 <p-panel>
   <div class="flex justify-between">
-    <h4>Title</h4>
+    <h4>Employee Management</h4>
     <p-toggleswitch (onChange)="toggleDarkMode()" />
   </div>
 </p-panel>
