--- a/src/app/feature/employee/pages/list-employee/list-employee.component.html
+++ b/src/app/feature/employee/pages/list-employee/list-employee.component.html
@@ -1,61 +1,114 @@
 <p-card>
   <p-table
-    #dt2
+    *ngIf="employees()"
     [value]="employees().data"
     [paginator]="true"
     [rows]="pageData().per_page"
     [lazy]="true"
     [totalRecords]="employees().items"
-    (onPage)="loadEmployeesLazy($event)"
+    sortMode="multiple"
+    dataKey="id"
+    [globalFilterFields]="[
+      'first_name',
+      'last_name',
+      'username',
+      'email',
+      'birthdate',
+      'basic_salary',
+      'status',
+      'group',
+      'description'
+    ]"
     [rowsPerPageOptions]="[5, 10, 20]"
+    stateKey="dt-state-demo-local"
+    stateStorage="local"
+    responsiveLayout="scroll"
     [scrollable]="true"
-    [scrollHeight]="'calc(100vh - 230px)'"
-    
+    [scrollHeight]="'calc(100vh - 300px)'"
+    (onLazyLoad)="loadEmployeesLazy($event)"
+    styleClass="p-datatable-gridlines"
   >
-    <ng-template #caption>
-      <div class="flex">
-        <p-iconfield iconPosition="left" class="ml-auto">
-          <p-inputicon>
-            <i class="pi pi-search"></i>
-          </p-inputicon>
-          <input pInputText type="text" placeholder="Search keyword" />
-        </p-iconfield>
-      </div>
-    </ng-template>
+  <ng-template #caption>
+    <div class="flex items-center justify-between">
+        <span class="text-xl font-bold">Employees</span>
+        <a [routerLink]="['create']" class="p-button">
+          <i class="pi pi-plus" ></i>
+          Create</a>
+    </div>
+</ng-template>
     <ng-template #header>
       <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Username</th>
-        <th>Email</th>
-        <th>Birthdate</th>
-        <th>Status</th>
-        <th>Group</th>
-        <th>Description</th>
+        @for (col of columns; track $index) {
+
+          <th  style="width: 200px;">{{col.header}}</th>
+        }
+        
+      </tr>
+      <tr>
+        @for (col of columns; track $index) {
+          @if (col.type !== 'action') {
+            <th>
+              <p-columnFilter
+                [type]="col.type"
+  
+                [field]="col.field"
+                [placeholder]="'Search by ' + col.field"
+                [ariaLabel]="'Filter ' + col.field"
+                matchMode="equals"
+              ></p-columnFilter>
+            </th>
+          } @else {
+            <th></th>
+          }
+          
+        }
+        
       </tr>
     </ng-template>
     <ng-template #body let-product>
       <tr>
-        <td>{{ product.first_name }}</td>
-        <td>{{ product.last_name }}</td>
-        <td>{{ product.username }}</td>
-        <td>{{ product.email }}</td>
-        <td>{{ product.birthdate }}</td>
-        <td>
-          <p-toggleswitch [ngModel]="product.status" />
-        </td>
-        <td>{{ product.group }}</td>
-        <td>
-          <textarea
-            readonly
-            rows="5"
-            autoResize
-            cols="50"
-            pTextarea
-            [ngModel]="product.description"
-          ></textarea>
-        </td>
+        @for (col of columns; track $index) {
+          <td>
+            @switch (col.field) {
+              @case('first_name') {
+                <a class="text-blue-800" [routerLink]="['info', product.id]">{{ product[col.field] }}</a>
+              }
+              @case ('status') {
+                <p-toggleswitch [ngModel]="product[col.field]" />
+              }
+              @case ('birthdate') {
+                {{ product[col.field] | date: 'dd/MM/yyyy' }}
+              }
+              @case ('basic_salary') {
+                {{ product[col.field] }}
+              }
+              @case ('description') {
+                <textarea
+                readonly
+                rows="5"
+                autoResize
+                cols="50"
+                pTextarea
+                [ngModel]="product[col.field]"
+              ></textarea>
+              }
+              @case('action') {
+                <div class="flex gap-2">
+                  <p-button icon="pi pi-pen-to-square" severity="warn" (onClick)="handleAction('edit')" />
+                <p-button icon="pi pi-trash" severity="danger" (onClick)="handleAction('delete')" />
+                </div>
+              }
+              @default {
+                {{ product[col.field] }}
+              }
+            }
+            
+          </td>
+        }
+        
       </tr>
     </ng-template>
   </p-table>
 </p-card>
+
+<p-toast></p-toast>
