--- a/src/app/feature/employee/pages/info-employee/info-employee.component.html
+++ b/src/app/feature/employee/pages/info-employee/info-employee.component.html
@@ -28,7 +28,7 @@
             </div>
             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
               <dt class="text-sm/6 font-medium text-gray-900">Basic Salary</dt>
-              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{employee().basic_salary | currency: 'Rp' }}</dd>
+              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{employee().basic_salary | currency: 'Rp.' }}</dd>
             </div>
             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
               <dt class="text-sm/6 font-medium text-gray-900">Status</dt>
